--- a/src/client/doska.ui
+++ b/src/client/doska.ui
@@ -32,6 +32,9 @@
     <item>
      <widget class="QLineEdit" name="lineEdit_2">
       <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
        <string>Название доски</string>
       </property>
      </widget>
@@ -39,6 +42,9 @@
     <item>
      <widget class="QLineEdit" name="lineEdit_3">
       <property name="text">
+       <string/>
+      </property>
+      <property name="placeholderText">
        <string>Логин (автоматически)</string>
       </property>
      </widget>
