--- a/src/client/deskadminpanel.ui
+++ b/src/client/deskadminpanel.ui
@@ -33,7 +33,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>3</number>
    </property>
    <widget class="QWidget" name="book_page">
     <widget class="QLabel" name="book_list_label">
@@ -303,6 +303,90 @@ font-family: 'Roboto Slab', serif;</string>
      </property>
      <property name="wordWrap">
       <bool>true</bool>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="desk_settings_page">
+    <widget class="QLabel" name="desk_name_label">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>20</y>
+       <width>201</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Название доски:</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="desk_edit_name_button">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>80</y>
+       <width>200</width>
+       <height>36</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">float: right;
+margin-right: 3%;
+margin-top: 5px;
+border-radius: 5px;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+padding: 5px 9px;
+font-size: 1.2em;
+background-color: rgba(236, 101, 80, 1);
+text-shadow: #454545 0 0 2px;
+border-bottom: 4px solid rgba(217, 91, 72, 1);
+color: white;
+font-family: 'Roboto Slab', serif;</string>
+     </property>
+     <property name="text">
+      <string>Изменить название</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="desk_name_input">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>50</y>
+       <width>200</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <property name="placeholderText">
+      <string>Введите новое название доски</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="invites_page">
+    <widget class="QLabel" name="invites_list_label">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>20</y>
+       <width>160</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Список приглашений:</string>
+     </property>
+    </widget>
+    <widget class="QListWidget" name="invites_list">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>50</y>
+       <width>371</width>
+       <height>561</height>
+      </rect>
      </property>
     </widget>
    </widget>
